--- a/index.html
+++ b/index.html
@@ -2,12 +2,195 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title data-i18n="title">كيان الخليج | الصفحة الرئيسية</title>
-  <link rel="icon" href="WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg" type="image/jpeg">
+  
+  <!-- Meta Tags for SEO -->
+  <meta name="description" content="كيان الخليج للصناعة - متخصصون في تصنيع وتركيب الكرتن وول والكلادينج والنوافذ والأبواب الألمنيوم في المملكة العربية السعودية. رؤية هندسية متطورة وجودة عالية.">
+  <meta name="keywords" content="كرتن وول, كلادينج, نوافذ ألمنيوم, أبواب ألمنيوم, واجهات زجاجية, كابينات دش, درابزين, رولر شتر, قواطع زجاجية, مطابخ, السعودية, الرياض">
+  <meta name="author" content="كيان الخليج للصناعة">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="ar">
+  <meta name="revisit-after" content="7 days">
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="كيان الخليج للصناعة | الصفحة الرئيسية">
+  <meta property="og:description" content="متخصصون في تصنيع وتركيب الكرتن وول والكلادينج والنوافذ والأبواب الألمنيوم في المملكة العربية السعودية">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://kayanfactory.com/">
+  <meta property="og:image" content="https://kayanfactory.com/smart-aluminium-windows-1024x683-1-1000x570.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:site_name" content="كيان الخليج للصناعة">
+  <meta property="og:locale" content="ar_SA">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="كيان الخليج للصناعة | الصفحة الرئيسية">
+  <meta name="twitter:description" content="متخصصون في تصنيع وتركيب الكرتن وول والكلادينج والنوافذ والأبواب الألمنيوم في المملكة العربية السعودية">
+  <meta name="twitter:image" content="https://kayanfactory.com/smart-aluminium-windows-1024x683-1-1000x570.png">
+  
+  <!-- Additional Meta Tags -->
+  <meta name="theme-color" content="#0d47a1">
+  <meta name="msapplication-TileColor" content="#0d47a1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="كيان الخليج">
+  <link rel="apple-touch-icon" href="WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg">
+  
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="manifest.json">
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://kayanfactory.com/">
+  
+  <!-- Alternate Languages -->
+  <link rel="alternate" hreflang="ar" href="https://kayanfactory.com/">
+  <link rel="alternate" hreflang="en" href="https://kayanfactory.com/?lang=en">
+  <link rel="alternate" hreflang="x-default" href="https://kayanfactory.com/">
+  <link rel="icon" href="window_icon_125687.svg" type="image/svg+xml">
+  
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "كيان الخليج للصناعة",
+    "alternateName": "Kayan Alkhalij Manufacturing",
+    "url": "https://kayanfactory.com",
+    "logo": "https://kayanfactory.com/WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg",
+    "description": "متخصصون في تصنيع وتركيب الكرتن وول والكلادينج والنوافذ والأبواب الألمنيوم في المملكة العربية السعودية",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "الرياض",
+      "addressRegion": "الرياض",
+      "addressCountry": "SA",
+      "streetAddress": "طريق الملك عبدالعزيز"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+966545666924",
+      "contactType": "customer service",
+      "email": "kayanalkhalij.eng1@gmail.com",
+      "availableLanguage": ["Arabic", "English"]
+    },
+    "sameAs": [
+      "https://www.facebook.com/share/1AiZX5aWux/",
+      "https://x.com/Kayanalkhalij?t=ju5kCDg-ElJ1n_7MiXtvBw&s=09",
+      "https://www.linkedin.com/company/kayan-aluminum-factory/",
+      "https://www.instagram.com/kayanalkhalij.eng1?igsh=MTVmMGlidWJlOGZlZA=="
+    ],
+    "foundingDate": "2015",
+    "numberOfEmployees": "50-100",
+    "serviceArea": {
+      "@type": "Country",
+      "name": "Saudi Arabia"
+    },
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "خدمات كيان الخليج",
+      "itemListElement": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "كرتن وول وكلادينج",
+            "description": "تصميم وتنفيذ واجهات المباني الزجاجية والكلادينج بأحدث التقنيات"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "نوافذ وأبواب ألمنيوم",
+            "description": "تصنيع وتركيب النوافذ والأبواب الألمنيوم عالية الجودة"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "كابائن الدش",
+            "description": "تصميم وتصنيع كابائن الدش المخصصة بأحدث التصاميم"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "درابزين ورولر شتر",
+            "description": "تصنيع وتركيب الدرابزين والرولر شتر بأعلى معايير الجودة"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "قواطع زجاجية ومطابخ",
+            "description": "تصميم وتنفيذ القواطع الزجاجية والمطابخ المخصصة"
+          }
+        }
+      ]
+    }
+  }
+  </script>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
+  <style>
+    /* Responsive styles */
+    @media (max-width: 768px) {
+      .hero-content {
+        text-align: center;
+        padding: 1rem;
+      }
+      .product-cards-grid {
+        flex-wrap: wrap;
+        gap: 1rem;
+      }
+      .product-card {
+        min-width: 140px;
+        padding: 1rem;
+      }
+      .main-nav {
+        display: none;
+        flex-direction: column;
+        background: #fff;
+        position: absolute;
+        top: 100%;
+        right: 0;
+        width: 100%;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      }
+      .main-nav a {
+        padding: 1rem;
+        border-bottom: 1px solid #ddd;
+      }
+      .mobile-menu-btn {
+        display: block;
+        background: none;
+        border: none;
+        cursor: pointer;
+      }
+      .mobile-menu-btn span {
+        display: block;
+        width: 25px;
+        height: 3px;
+        background: #000;
+        margin: 5px 0;
+      }
+    }
+    @media (min-width: 769px) {
+      .mobile-menu-btn {
+        display: none;
+      }
+      .main-nav {
+        display: flex;
+      }
+    }
+  </style>
 </head>
 <body lang="ar">
   <!-- Top Bar -->
@@ -31,24 +214,30 @@
   <header class="main-header">
     <div class="container nav-flex">
       <div class="logo-block">
-        <div class="logo-img"><img src="WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg" alt="شعار كيان الخليج"></div>
+        <div class="logo-img"><img src="WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg" alt="Logo"></div>
         <div class="logo-text">
           <div class="logo-title" data-i18n="company_name">كيان الخليج للصناعة</div>
           <div class="logo-sub" data-i18n="company_name_en">Kayan Alkhalij Manufacturing</div>
         </div>
       </div>
-      <nav class="main-nav">
-        <a href="index.html" class="active"><i class="fa-solid fa-house"></i> <span data-i18n="home">الرئيسية</span></a>
-        <a href="products.html"><i class="fa-solid fa-box"></i> <span data-i18n="products">منتجاتنا</span></a>
-        <a href="projects.html"><i class="fa-solid fa-diagram-project"></i> <span>مشاريعنا</span></a>
-        <a href="about.html"><i class="fa-solid fa-users"></i> <span data-i18n="about">من نحن</span></a>
-        <a href="contact.html"><i class="fa-solid fa-phone"></i> <span data-i18n="contact">اتصل بنا</span></a>
+      <nav id="main-nav" class="main-nav">
+        <a href="index.html" data-i18n="home"><i class="fa fa-home"></i> الرئيسية</a>
+        <a href="products.html" data-i18n="products"><i class="fa fa-box"></i> منتجاتنا</a>
+        <a href="projects.html" data-i18n="projects"><i class="fa fa-diagram-project"></i> مشاريعنا</a>
+        <a href="about.html" data-i18n="about"><i class="fa fa-users"></i> من نحن</a>
+        <a href="contact.html" data-i18n="contact"><i class="fa fa-phone"></i> اتصل بنا</a>
       </nav>
+      <button class="mobile-menu-btn" aria-label="القائمة" aria-expanded="false" aria-controls="main-nav">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
     </div>
   </header>
+  
   <!-- Hero -->
   <section class="hero">
-    <img src="Screenshot 2025-07-20 213250_1753036605407.png" alt="خلفية كيان الخليج" class="hero-bg-img" loading="eager">
+    <img src="WhatsApp Image 2025-07-31 at 12.35.10_3ca7ce88.jpg" alt="خلفية كيان الخليج" class="hero-bg-img" loading="eager">
     <div class="hero-content" data-aos="fade-up">
       <h1 data-i18n="hero_title">كيان الخليج للصناعة</h1>
       <p data-i18n="hero_subtitle">رؤية هندسية متطورة</p>
@@ -162,6 +351,38 @@
       </div>
     </div>
   </section>
+  <!-- قسم مشاريعنا الجديد -->
+  <section class="projects-section">
+    <div class="container">
+      <h2 class="section-title" data-i18n="our_projects"><i class="fa fa-diagram-project"></i> مشاريعنا</h2>
+      <div class="projects-grid" style="display: flex; flex-wrap: wrap; gap: 1.5rem; justify-content: center;">
+        <div class="project-card" style="background:#fff; border-radius:1rem; box-shadow:0 2px 8px #0001; width:260px; overflow:hidden;">
+          <img src="smart-aluminium-windows-1024x683-1-1000x570.png" alt="مشروع 1" style="width:100%; height:160px; object-fit:cover;">
+          <div style="padding:1rem;">
+            <h3 style="margin:0 0 0.5rem 0;">واجهة زجاجية لمبنى إداري</h3>
+            <p style="font-size:0.95rem; color:#555;">تنفيذ واجهة كرتن وول وزجاج لمبنى إداري في الرياض.</p>
+            <a href="projects-aluminum-glass.html" class="btn btn-secondary" style="margin-top:0.5rem;"><i class="fa fa-arrow-left"></i> تفاصيل المشروع</a>
+          </div>
+        </div>
+        <div class="project-card" style="background:#fff; border-radius:1rem; box-shadow:0 2px 8px #0001; width:260px; overflow:hidden;">
+          <img src="9919016-1171360793.jpg" alt="مشروع 2" style="width:100%; height:160px; object-fit:cover;">
+          <div style="padding:1rem;">
+            <h3 style="margin:0 0 0.5rem 0;">كلادينج لمجمع تجاري</h3>
+            <p style="font-size:0.95rem; color:#555;">تصميم وتنفيذ كلادينج خارجي لمجمع تجاري حديث.</p>
+            <a href="projects-cladding.html" class="btn btn-secondary" style="margin-top:0.5rem;"><i class="fa fa-arrow-left"></i> تفاصيل المشروع</a>
+          </div>
+        </div>
+        <div class="project-card" style="background:#fff; border-radius:1rem; box-shadow:0 2px 8px #0001; width:260px; overflow:hidden;">
+          <img src="sasa6.jpg" alt="مشروع 3" style="width:100%; height:160px; object-fit:cover;">
+          <div style="padding:1rem;">
+            <h3 style="margin:0 0 0.5rem 0;">أبواب ونوافذ UPVC</h3>
+            <p style="font-size:0.95rem; color:#555;">تركيب أبواب ونوافذ UPVC في فيلا سكنية.</p>
+            <a href="projects-upvc-windows.html" class="btn btn-secondary" style="margin-top:0.5rem;"><i class="fa fa-arrow-left"></i> تفاصيل المشروع</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- CTA -->
   <section class="cta-section">
     <div class="container">
@@ -188,10 +409,11 @@
       <div class="footer-col">
         <div class="footer-title" data-i18n="quick_links">روابط سريعة</div>
         <ul>
-          <li><a href="index.html" data-i18n="home">الرئيسية</a></li>
-          <li><a href="products.html" data-i18n="products">منتجاتنا</a></li>
-          <li><a href="about.html" data-i18n="about">من نحن</a></li>
-          <li><a href="contact.html" data-i18n="contact">اتصل بنا</a></li>
+          <li><a href="index.html" data-i18n="home"><i class="fa fa-home"></i> الرئيسية</a></li>
+          <li><a href="products.html" data-i18n="products"><i class="fa fa-box"></i> منتجاتنا</a></li>
+          <li><a href="projects.html" data-i18n="projects"><i class="fa fa-diagram-project"></i> مشاريعنا</a></li>
+          <li><a href="about.html" data-i18n="about"><i class="fa fa-users"></i> من نحن</a></li>
+          <li><a href="contact.html" data-i18n="contact"><i class="fa fa-phone"></i> اتصل بنا</a></li>
         </ul>
       </div>
       <div class="footer-col">
@@ -223,5 +445,7 @@
   <button id="back-to-top" class="back-to-top" aria-label="العودة للأعلى"><i class="fa-solid fa-arrow-up"></i></button>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="script.js"></script>
+  
+  
 </body>
 </html>
