--- a/projects-cladding.html
+++ b/projects-cladding.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>مشاريع الكلادينج | كيان الخليج</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg" type="image/jpeg">
+    <link rel="icon" href="window_icon_125687.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
@@ -43,6 +43,11 @@
                 <a href="about.html"><i class="fa-solid fa-users"></i> <span>من نحن</span></a>
                 <a href="contact.html"><i class="fa-solid fa-phone"></i> <span>اتصل بنا</span></a>
             </nav>
+            <button class="mobile-menu-btn" aria-label="القائمة">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </div>
     </header>
 
