--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>مشاريعنا | كيان الخليج</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg" type="image/jpeg">
+    <link rel="icon" href="window_icon_125687.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
@@ -17,6 +17,10 @@
                 <span class="top-bar-item"><i class="fa-solid fa-envelope"></i><a href="mailto:info@kayanfactory.com" class="top-bar-link">info@kayanfactory.com</a></span>
                 <span class="top-bar-item"><i class="fa-solid fa-phone"></i><a href="tel:+966545666924" class="top-bar-link">+966545666924</a></span>
             </div>
+            <div class="working-hours" style="margin-right:28px;line-height:1.7;">
+      السبت - الخميس: 8:00 ص - 6:00 م<br>
+      الجمعة: مغلق
+    </div>
             <div class="lang-switcher">
                 <button id="lang-toggle" class="lang-btn" type="button"><span class="flag">🇸🇦</span> <span>العربية</span></button>
                 <div id="lang-dropdown" class="lang-dropdown" style="display:none;">
@@ -43,21 +47,26 @@
                 <a href="about.html"><i class="fa-solid fa-users"></i> <span>من نحن</span></a>
                 <a href="contact.html"><i class="fa-solid fa-phone"></i> <span>اتصل بنا</span></a>
             </nav>
+            <button class="mobile-menu-btn" aria-label="القائمة">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </div>
     </header>
 
     <section class="hero-section projects-hero">
         <div class="container">
             <div class="hero-content" data-aos="fade-up">
-                <h1 class="hero-title" style="color: #000;">مشاريعنا المميزة</h1>
-                <p class="hero-subtitle" style="color: #000;">اكتشف مجموعة متنوعة من مشاريعنا في مختلف المجالات الصناعية والإنشائية</p>
+                <h1 class="hero-title" data-i18n="projects_title">مشاريعنا المميزة</h1>
+                <p class="hero-subtitle" data-i18n="projects_desc">اكتشف مجموعة متنوعة من مشاريعنا في مختلف المجالات الصناعية والإنشائية</p>
             </div>
         </div>
     </section>
 
     <section class="projects-categories">
         <div class="container">
-            <h2 class="section-title" data-aos="fade-up">فئات مشاريعنا</h2>
+            <h2 class="section-title" data-i18n="project_categories">فئات مشاريعنا</h2>
             <div class="projects-grid">
                 <div class="project-card" data-aos="fade-up" onclick="window.location.href='projects-aluminum-glass.html'">
                     <div class="project-card-image">
@@ -67,11 +76,11 @@
                         </div>
                     </div>
                     <div class="project-card-content">
-                        <h3><i class="fa-solid fa-building"></i> المنيوم وزجاج</h3>
-                        <p>مشاريعنا المميزة في مجال الألمنيوم والزجاج، تشمل واجهات المباني والمنشآت التجارية والسكنية</p>
+                        <h3><i class="fa-solid fa-building"></i> <span data-i18n="aluminum_glass">المنيوم وزجاج</span></h3>
+                        <p data-i18n="aluminum_glass_desc">مشاريعنا المميزة في مجال الألمنيوم والزجاج، تشمل واجهات المباني والمنشآت التجارية والسكنية</p>
                         <div class="project-stats">
-                            <span><i class="fa-solid fa-project-diagram"></i> 50+ مشروع</span>
-                            <span><i class="fa-solid fa-star"></i> 4.9/5 تقييم</span>
+                            <span><i class="fa-solid fa-project-diagram"></i> 50+ <span data-i18n="projects">مشروع</span></span>
+                            <span><i class="fa-solid fa-star"></i> 4.9/5 <span data-i18n="rating">تقييم</span></span>
                         </div>
                     </div>
                 </div>
@@ -84,11 +93,11 @@
                         </div>
                     </div>
                     <div class="project-card-content">
-                        <h3><i class="fa-solid fa-layer-group"></i> كلادينج</h3>
-                        <p>تصاميم مبتكرة وأنظمة كلادينج متطورة للمباني الحديثة والمنشآت المعمارية المميزة</p>
+                        <h3><i class="fa-solid fa-layer-group"></i> <span data-i18n="cladding">كلادينج</span></h3>
+                        <p data-i18n="cladding_desc">تصاميم مبتكرة وأنظمة كلادينج متطورة للمباني الحديثة والمنشآت المعمارية المميزة</p>
                         <div class="project-stats">
-                            <span><i class="fa-solid fa-project-diagram"></i> 35+ مشروع</span>
-                            <span><i class="fa-solid fa-star"></i> 4.8/5 تقييم</span>
+                            <span><i class="fa-solid fa-project-diagram"></i> 35+ <span data-i18n="projects">مشروع</span></span>
+                            <span><i class="fa-solid fa-star"></i> 4.8/5 <span data-i18n="rating">تقييم</span></span>
                         </div>
                     </div>
                 </div>
@@ -101,11 +110,11 @@
                         </div>
                     </div>
                     <div class="project-card-content">
-                        <h3><i class="fa-solid fa-door-open"></i> أبواب WPC</h3>
-                        <p>أبواب WPC عالية الجودة مقاومة للماء والحشرات، مثالية للمنازل والمكاتب والمنشآت التجارية</p>
+                        <h3><i class="fa-solid fa-door-open"></i> <span data-i18n="wpc_doors">أبواب WPC</span></h3>
+                        <p data-i18n="wpc_doors_desc">أبواب WPC عالية الجودة مقاومة للماء والحشرات، مثالية للمنازل والمكاتب والمنشآت التجارية</p>
                         <div class="project-stats">
-                            <span><i class="fa-solid fa-project-diagram"></i> 80+ مشروع</span>
-                            <span><i class="fa-solid fa-star"></i> 4.9/5 تقييم</span>
+                            <span><i class="fa-solid fa-project-diagram"></i> 80+ <span data-i18n="projects">مشروع</span></span>
+                            <span><i class="fa-solid fa-star"></i> 4.9/5 <span data-i18n="rating">تقييم</span></span>
                         </div>
                     </div>
                 </div>
@@ -118,11 +127,11 @@
                         </div>
                     </div>
                     <div class="project-card-content">
-                        <h3><i class="fa-solid fa-window-maximize"></i> نوافذ وأبواب UPVC</h3>
-                        <p>أنظمة نوافذ وأبواب UPVC عازلة للحرارة والصوت، توفير الطاقة وحماية البيئة</p>
+                        <h3><i class="fa-solid fa-window-maximize"></i> <span data-i18n="upvc_windows">نوافذ وأبواب UPVC</span></h3>
+                        <p data-i18n="upvc_windows_desc">أنظمة نوافذ وأبواب UPVC عازلة للحرارة والصوت، توفير الطاقة وحماية البيئة</p>
                         <div class="project-stats">
-                            <span><i class="fa-solid fa-project-diagram"></i> 60+ مشروع</span>
-                            <span><i class="fa-solid fa-star"></i> 4.7/5 تقييم</span>
+                            <span><i class="fa-solid fa-project-diagram"></i> 60+ <span data-i18n="projects">مشروع</span></span>
+                            <span><i class="fa-solid fa-star"></i> 4.7/5 <span data-i18n="rating">تقييم</span></span>
                         </div>
                     </div>
                 </div>
