--- a/contact.html
+++ b/contact.html
@@ -139,15 +139,22 @@
   <div class="top-bar">
     <div class="container">
       <div class="top-bar-right">
-        <span class="top-bar-item"><i class="fa-solid fa-location-dot"></i><span>الرياض، طريق الملك عبدالعزيز</span></span>
-        <span class="top-bar-item"><i class="fa-solid fa-envelope"></i><a href="mailto:info@kayanfactory.com" class="top-bar-link">info@kayanfactory.com</a></span>
-        <span class="top-bar-item"><i class="fa-solid fa-phone"></i><a href="tel:+966545666924" class="top-bar-link">+966545666924</a></span>
+        <span class="top-bar-item"><i class="fa-solid fa-location-dot"></i><span data-i18n="address">الرياض، طريق الملك عبدالعزيز</span></span>
+        <span class="top-bar-item"><i class="fa-solid fa-envelope"></i><a href="mailto:info@kayanfactory.com" class="top-bar-link" data-i18n="email">info@kayanfactory.com</a></span>
+        <span class="top-bar-item"><i class="fa-solid fa-phone"></i><a href="tel:+966545666924" class="top-bar-link" data-i18n="phone">+966545666924</a></span>
+      </div>
+      <div class="top-bar-socials">
+        <a href="https://www.facebook.com/share/1AiZX5aWux/" target="_blank" rel="noopener" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://x.com/Kayanalkhalij?t=ju5kCDg-ElJ1n_7MiXtvBw&s=09" target="_blank" rel="noopener" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/company/kayan-aluminum-factory/" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.instagram.com/kayanalkhalij.eng1?igsh=MTVmMGlidWJlOGZlZA==" target="_blank" rel="noopener" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://wa.me/966545666924" target="_blank" rel="noopener"><i class="fab fa-whatsapp"></i></a>
       </div>
       <div class="lang-switcher">
-        <button id="lang-toggle" class="lang-btn" type="button"><span class="flag">🇸🇦</span> <span>العربية</span></button>
+        <button id="lang-toggle" class="lang-btn" type="button"><span class="flag">🇸🇦</span> <span data-i18n="arabic">العربية</span></button>
         <div id="lang-dropdown" class="lang-dropdown" style="display:none;">
-          <button data-lang="ar" class="lang-option"><span class="flag">🇸🇦</span> <span>العربية</span></button>
-          <button data-lang="en" class="lang-option"><span class="flag">🇬🇧</span> <span>English</span></button>
+          <button data-lang="ar" class="lang-option"><span class="flag">🇸🇦</span> <span data-i18n="arabic">العربية</span></button>
+          <button data-lang="en" class="lang-option"><span class="flag">🇬🇧</span> <span data-i18n="english">English</span></button>
         </div>
       </div>
     </div>
@@ -162,11 +169,11 @@
         </div>
       </div>
       <nav class="main-nav">
-        <a href="index.html"><i class="fa-solid fa-house"></i> <span>الرئيسية</span></a>
-        <a href="products.html"><i class="fa-solid fa-box"></i> <span>منتجاتنا</span></a>
-        <a href="projects.html"><i class="fa-solid fa-diagram-project"></i> <span>مشاريعنا</span></a>
-        <a href="about.html"><i class="fa-solid fa-users"></i> <span>من نحن</span></a>
-        <a href="contact.html" class="active"><i class="fa-solid fa-phone"></i> <span>اتصل بنا</span></a>
+        <a href="index.html" data-i18n="home"><i class="fa-solid fa-house"></i> الرئيسية</a>
+        <a href="products.html" data-i18n="products"><i class="fa-solid fa-box"></i> منتجاتنا</a>
+        <a href="projects.html" data-i18n="projects"><i class="fa-solid fa-diagram-project"></i> مشاريعنا</a>
+        <a href="about.html" data-i18n="about"><i class="fa-solid fa-users"></i> من نحن</a>
+        <a href="contact.html" class="active" data-i18n="contact"><i class="fa-solid fa-phone"></i> اتصل بنا</a>
       </nav>
       <button class="mobile-menu-btn" aria-label="القائمة">
         <span></span>
@@ -179,18 +186,18 @@
   <section class="contact-section">
     <div class="contact-content" style="display:flex;gap:2.5rem;align-items:flex-start;justify-content:center;flex-wrap:wrap;">
       <div style="flex:1;min-width:260px;max-width:420px;">
-        <div class="contact-form-title">اتصل بنا</div>
-        <div class="contact-form-desc">نحن هنا لمساعدتك في تحقيق رؤيتك المعمارية. تواصل معنا للحصول على استشارة مجانية.</div>
+        <div class="contact-form-title" data-i18n="contact">اتصل بنا</div>
+        <div class="contact-form-desc" data-i18n="contact_desc">نحن هنا لمساعدتك في تحقيق رؤيتك المعمارية. تواصل معنا للحصول على استشارة مجانية.</div>
         <form class="contact-form" action="https://formspree.io/f/mpwlqgno" method="POST">
-          <label for="name">الاسم الكامل</label>
+          <label for="name" data-i18n="full_name">الاسم الكامل</label>
           <input type="text" id="name" name="name" placeholder="اكتب اسمك الكامل" required>
           <label for="email">البريد الإلكتروني</label>
           <input type="email" id="email" name="email" placeholder="example@email.com" required>
           <label for="phone">رقم الهاتف</label>
           <input type="text" id="phone" name="phone" placeholder="05xxxxxxxx" required>
-          <label for="message">رسالتك</label>
+          <label for="message" data-i18n="your_message">رسالتك</label>
           <textarea id="message" name="message" placeholder="اكتب رسالتك هنا..." required></textarea>
-          <button type="submit"><i class="fa-solid fa-paper-plane"></i> إرسال</button>
+          <button type="submit" data-i18n="send_message"><i class="fa-solid fa-paper-plane"></i> إرسال</button>
         </form>
       </div>
       <div class="contact-company-info" style="flex:1;min-width:260px;max-width:370px;display:flex;flex-direction:column;gap:1.2rem;align-items:flex-start;justify-content:flex-start;background:var(--bg-primary);border-radius:12px;box-shadow:0 2px 12px #e0e0e0;padding:2rem 1.5rem;margin-top:0;">
@@ -232,22 +239,22 @@
         </div>
       </div>
       <div class="footer-col">
-        <div class="footer-title">روابط سريعة</div>
+        <div class="footer-title" data-i18n="quick_links">روابط سريعة</div>
         <ul>
-          <li><a href="index.html">الرئيسية</a></li>
-          <li><a href="products.html">منتجاتنا</a></li>
-          <li><a href="about.html">من نحن</a></li>
-          <li><a href="contact.html">اتصل بنا</a></li>
+          <li><a href="index.html" data-i18n="home">الرئيسية</a></li>
+          <li><a href="products.html" data-i18n="products">منتجاتنا</a></li>
+          <li><a href="about.html" data-i18n="about">من نحن</a></li>
+          <li><a href="contact.html" data-i18n="contact">اتصل بنا</a></li>
         </ul>
       </div>
       <div class="footer-col">
-        <div class="footer-title">خدماتنا</div>
+        <div class="footer-title" data-i18n="services">خدماتنا</div>
         <ul>
-          <li><span>كرتن وول وكلادينج</span></li>
-          <li><span>نوافذ وأبواب</span></li>
-          <li><span>كابائن الدش</span></li>
-          <li><span>درابزين ورولر شتر</span></li>
-          <li><span>قواطع زجاجية ومطابخ</span></li>
+          <li><span data-i18n="service1">كرتن وول وكلادينج</span></li>
+          <li><span data-i18n="service2">نوافذ وأبواب</span></li>
+          <li><span data-i18n="service3">كابائن الدش</span></li>
+          <li><span data-i18n="service4">درابزين ورولر شتر</span></li>
+          <li><span data-i18n="service5">قواطع زجاجية ومطابخ</span></li>
         </ul>
       </div>
       <div class="footer-col footer-socials">
@@ -259,10 +266,10 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <span>© 2025 كيان الخليج للصناعة. جميع الحقوق محفوظة.</span>
+      <span data-i18n="copyright">© 2025 كيان الخليج للصناعة. جميع الحقوق محفوظة.</span>
       <div>
-        <a href="privacy.html">سياسة الخصوصية</a>
-        <a href="terms.html">الشروط والأحكام</a>
+        <a href="privacy.html" data-i18n="privacy">سياسة الخصوصية</a>
+        <a href="terms.html" data-i18n="terms">الشروط والأحكام</a>
       </div>
     </div>
   </footer>
