--- a/comments.html
+++ b/comments.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-i18n="comments_title">آراء العملاء | كيان الخليج</title>
+  <link rel="canonical" href="https://kayanfactory.netlify.app/comments.html">
+  <link rel="alternate" hreflang="ar" href="https://kayanfactory.netlify.app/comments.html">
+  <link rel="alternate" hreflang="en" href="https://kayanfactory.netlify.app/comments.html?lang=en">
   <link rel="icon" href="window_icon_125687.svg" type="image/svg+xml">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
