--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>اتصل بنا | كيان الخليج</title>
+  <link rel="canonical" href="https://kayanfactory.netlify.app/contact.html">
+  <link rel="alternate" hreflang="ar" href="https://kayanfactory.netlify.app/contact.html">
+  <link rel="alternate" hreflang="en" href="https://kayanfactory.netlify.app/contact.html?lang=en">
   <link rel="icon" href="window_icon_125687.svg" type="image/svg+xml">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -223,7 +226,7 @@
           <i class="fa-solid fa-globe" style="color:#1565c0;"></i>
           <b>الموقع الإلكتروني:</b>
         </div>
-        <a href="https://kayanfactory.com" target="_blank" style="color:#1565c0;text-decoration:underline;margin-right:28px;">kayanfactory.com</a>
+        <a href="https://kayanfactory.netlify.app" target="_blank" style="color:#1565c0;text-decoration:underline;margin-right:28px;">kayanfactory.netlify.app</a>
       </div>
     </div>
   </section>
