--- a/products.html
+++ b/products.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-i18n="products_title">منتجاتنا | كيان الخليج</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="canonical" href="https://kayanfactory.netlify.app/products.html">
+  <link rel="alternate" hreflang="ar" href="https://kayanfactory.netlify.app/products.html">
+  <link rel="alternate" hreflang="en" href="https://kayanfactory.netlify.app/products.html?lang=en">
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800;900&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="window_icon_125687.svg" type="image/svg+xml">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
