--- a/index.html
+++ b/index.html
@@ -225,8 +225,7 @@
   <!-- Enhanced Hero -->
   <section class="hero hero-legendary">
     <div class="hero-bg">
-      <!-- استخدم صورة البرج كخلفية هنا -->
-      <img src="smart-aluminium-windows-1024x683-1-1000x570.png" alt="خلفية كيان الخليج" class="hero-bg-img" style="object-fit:cover; opacity:0.25; position:absolute; width:100%; height:100%; left:0; top:0; z-index:1;">
+      <img src="WhatsApp Image 2025-07-31 at 12.35.10_3ca7ce88.jpg" alt="خلفية كيان الخليج" class="hero-bg-img" style="object-fit:cover; opacity:0.25; position:absolute; width:100%; height:100%; left:0; top:0; z-index:1;">
       <div class="hero-overlay"></div>
     </div>
     <div class="hero-content" data-aos="fade-up" style="position:relative; z-index:2;">
@@ -241,18 +240,18 @@
       <p class="hero-description" data-aos="fade-up" data-aos-delay="300">
         نحن متخصصون في تصنيع وتركيب الكرتن وول والكلادينج والنوافذ والأبواب الألمنيوم بأعلى معايير الجودة العالمية
       </p>
-      <div class="hero-stats" data-aos="fade-up" data-aos-delay="400">
-        <div class="stat-item glass-effect">
-          <span class="stat-number">15+</span>
-          <span class="stat-label">سنة خبرة</span>
+      <div class="hero-stats" data-aos="fade-up" data-aos-delay="400" style="display:flex; justify-content:center; align-items:center; gap:2rem; margin-top:2rem;">
+        <div class="stat-item glass-effect" style="text-align:center;">
+          <span class="stat-number" style="font-size:2.5rem; font-weight:bold; color:#1e40af;">15+</span>
+          <span class="stat-label" style="display:block; margin-top:0.5rem;">سنة خبرة</span>
         </div>
-        <div class="stat-item glass-effect">
-          <span class="stat-number">500+</span>
-          <span class="stat-label">مشروع مكتمل</span>
+        <div class="stat-item glass-effect" style="text-align:center;">
+          <span class="stat-number" style="font-size:2.5rem; font-weight:bold; color:#10b981;">500+</span>
+          <span class="stat-label" style="display:block; margin-top:0.5rem;">مشروع مكتمل</span>
         </div>
-        <div class="stat-item glass-effect">
-          <span class="stat-number">100%</span>
-          <span class="stat-label">رضا العملاء</span>
+        <div class="stat-item glass-effect" style="text-align:center;">
+          <span class="stat-number" style="font-size:2.5rem; font-weight:bold; color:#f59e0b;">100%</span>
+          <span class="stat-label" style="display:block; margin-top:0.5rem;">رضا العملاء</span>
         </div>
       </div>
       <div class="hero-buttons" data-aos="fade-up" data-aos-delay="500">
@@ -794,11 +793,12 @@
   
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="script.js"></script>
-  
-  
+</body>
+</html>
 </body>
 </html>
   
   
 </body>
+</html>
 </html>
