--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
   <link rel="canonical" href="https://kayanfactory.netlify.app/about.html">
   <link rel="alternate" hreflang="ar" href="https://kayanfactory.netlify.app/about.html">
   <link rel="alternate" hreflang="en" href="https://kayanfactory.netlify.app/about.html?lang=en">
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800;900&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="window_icon_125687.svg" type="image/svg+xml">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -105,10 +106,10 @@
         رؤيتنا هي أن نكون الخيار الأول في المملكة العربية السعودية لتوفير الحلول المعمارية المتطورة بأعلى معايير الجودة والحرفية المهنية.
       </p>
       <div class="about-stats">
-        <div class="stat-item"><div class="stat-icon"><i class="fa-solid fa-building"></i></div><div class="stat-number" data-count="150">0</div><div class="stat-label" data-i18n="projects_completed">مشروع مكتمل</div></div>
-        <div class="stat-item"><div class="stat-icon"><i class="fa-solid fa-users"></i></div><div class="stat-number" data-count="50">0</div><div class="stat-label" data-i18n="happy_clients">عميل سعيد</div></div>
-        <div class="stat-item"><div class="stat-icon"><i class="fa-solid fa-award"></i></div><div class="stat-number" data-count="10">0</div><div class="stat-label" data-i18n="years_experience">سنوات خبرة</div></div>
-        <div class="stat-item"><div class="stat-icon"><i class="fa-solid fa-star"></i></div><div class="stat-number" data-count="5">0</div><div class="stat-label" data-i18n="star_rating">تقييم نجوم</div></div>
+        <div class="stat-item"><div class="stat-icon"><i class="fa-solid fa-building"></i></div><div class="stat-number" data-count="500">500</div><div class="stat-label" data-i18n="projects_completed">مشروع مكتمل</div></div>
+        <div class="stat-item"><div class="stat-icon"><i class="fa-solid fa-users"></i></div><div class="stat-number" data-count="150">150</div><div class="stat-label" data-i18n="happy_clients">عميل سعيد</div></div>
+        <div class="stat-item"><div class="stat-icon"><i class="fa-solid fa-award"></i></div><div class="stat-number" data-count="15">15</div><div class="stat-label" data-i18n="years_experience">سنوات خبرة</div></div>
+        <div class="stat-item"><div class="stat-icon"><i class="fa-solid fa-star"></i></div><div class="stat-number" data-count="5">5</div><div class="stat-label" data-i18n="star_rating">تقييم نجوم</div></div>
       </div>
       <div class="about-badge" style="text-align:center; margin-top:2rem;">
         <img src="WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg" alt="شعار كيان الخليج" style="width:80px; border-radius:12px;">
