--- a/products.html
+++ b/products.html
@@ -71,27 +71,27 @@
     <p data-i18n="products_desc">نقدم مجموعة شاملة من المنتجات الهندسية المتطورة التي تلبي احتياجات المشاريع المعمارية الحديثة</p>
     <div class="products-grid">
       <div class="product-card">
-        <img src="Screenshot 2025-07-20 213323_1753036605406.png" alt="كلادينج" class="product-img">
+        <img src="Screenshot 2025-07-20 213323_1753036605406.png" alt="كلادينج" class="product-img" loading="lazy" decoding="async" width="600" height="400">
         <h3 data-i18n="cladding">كلادينج</h3>
         <p data-i18n="cladding_desc">ألواح كلادينج عالية الجودة.</p>
       </div>
       <div class="product-card">
-        <img src="Screenshot 2025-07-20 213507_1753036605402.png" alt="واجهات زجاجية" class="product-img">
+        <img src="Screenshot 2025-07-20 213507_1753036605402.png" alt="واجهات زجاجية" class="product-img" loading="lazy" decoding="async" width="600" height="400">
         <h3 data-i18n="glass_facades">واجهات زجاجية</h3>
         <p data-i18n="glass_facades_desc">واجهات زجاجية هندسية متطورة.</p>
       </div>
       <div class="product-card">
-        <img src="Screenshot 2025-07-20 213428_1753036605405.png" alt="كابينات الدش" class="product-img">
+        <img src="Screenshot 2025-07-20 213428_1753036605405.png" alt="كابينات الدش" class="product-img" loading="lazy" decoding="async" width="600" height="400">
         <h3 data-i18n="modern_tower">كابينات الدش</h3>
         <p data-i18n="modern_tower_desc">كابينات الدش المتطورة.</p>
       </div>
       <div class="product-card">
-        <img src="Screenshot 2025-07-20 213351_1753036615329.png" alt="الأبواب" class="product-img">
+        <img src="Screenshot 2025-07-20 213351_1753036615329.png" alt="الأبواب" class="product-img" loading="lazy" decoding="async" width="600" height="400">
         <h3 data-i18n="skyscraper">الأبواب</h3>
         <p data-i18n="skyscraper_desc">نظم بناء متطورة للأبواب من الألومينيوم و الزجاج</p>
       </div>
       <div class="product-card">
-        <img src="Screenshot 2025-07-20 213337_1753036903980.png" alt="أعمال زجاج" class="product-img">
+        <img src="Screenshot 2025-07-20 213337_1753036903980.png" alt="أعمال زجاج" class="product-img" loading="lazy" decoding="async" width="600" height="400">
         <h3 data-i18n="glass_work">أعمال زجاج</h3>
         <p data-i18n="glass_work_desc">حلول زجاجية متكاملة.</p>
       </div>
