--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
     <link rel="canonical" href="https://kayanfactory.netlify.app/projects.html">
     <link rel="alternate" hreflang="ar" href="https://kayanfactory.netlify.app/projects.html">
     <link rel="alternate" hreflang="en" href="https://kayanfactory.netlify.app/projects.html?lang=en">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800;900&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="window_icon_125687.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -73,7 +74,7 @@
             <div class="projects-grid">
                 <div class="project-card" data-aos="fade-up" onclick="window.location.href='projects-aluminum-glass.html'">
                     <div class="project-card-image">
-                        <img src="Screenshot 2025-07-20 213507_1753036896128.png" alt="المنيوم وزجاج">
+                        <img src="Screenshot 2025-07-20 213507_1753036896128.png" alt="المنيوم وزجاج" loading="lazy" decoding="async" width="640" height="360">
                         <div class="project-card-overlay">
                             <i class="fa-solid fa-arrow-left"></i>
                         </div>
@@ -90,7 +91,7 @@
 
                 <div class="project-card" data-aos="fade-up" data-aos-delay="100" onclick="window.location.href='projects-cladding.html'">
                     <div class="project-card-image">
-                        <img src="Screenshot 2025-07-20 213323_1753036903981.png" alt="كلادينج">
+                        <img src="Screenshot 2025-07-20 213323_1753036903981.png" alt="كلادينج" loading="lazy" decoding="async" width="640" height="360">
                         <div class="project-card-overlay">
                             <i class="fa-solid fa-arrow-left"></i>
                         </div>
@@ -107,7 +108,7 @@
 
                 <div class="project-card" data-aos="fade-up" data-aos-delay="200" onclick="window.location.href='projects-wpc-doors.html'">
                     <div class="project-card-image">
-                        <img src="Screenshot 2025-07-20 213351_1753036896131.png" alt="أبواب WPC">
+                        <img src="Screenshot 2025-07-20 213351_1753036896131.png" alt="أبواب WPC" loading="lazy" decoding="async" width="640" height="360">
                         <div class="project-card-overlay">
                             <i class="fa-solid fa-arrow-left"></i>
                         </div>
@@ -124,7 +125,7 @@
 
                 <div class="project-card" data-aos="fade-up" data-aos-delay="300" onclick="window.location.href='projects-upvc-windows.html'">
                     <div class="project-card-image">
-                        <img src="Screenshot 2025-07-20 213337_1753036605405.png" alt="نوافذ وأبواب UPVC">
+                        <img src="Screenshot 2025-07-20 213337_1753036605405.png" alt="نوافذ وأبواب UPVC" loading="lazy" decoding="async" width="640" height="360">
                         <div class="project-card-overlay">
                             <i class="fa-solid fa-arrow-left"></i>
                         </div>
