--- a/comments.html
+++ b/comments.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-i18n="comments_title">آراء العملاء | كيان الخليج</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800;900&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="canonical" href="https://kayanfactory.netlify.app/comments.html">
   <link rel="alternate" hreflang="ar" href="https://kayanfactory.netlify.app/comments.html">
   <link rel="alternate" hreflang="en" href="https://kayanfactory.netlify.app/comments.html?lang=en">
