--- a/projects-aluminum-glass.html
+++ b/projects-aluminum-glass.html
@@ -7,6 +7,7 @@
     <link rel="canonical" href="https://kayanfactory.netlify.app/projects-aluminum-glass.html">
     <link rel="alternate" hreflang="ar" href="https://kayanfactory.netlify.app/projects-aluminum-glass.html">
     <link rel="alternate" hreflang="en" href="https://kayanfactory.netlify.app/projects-aluminum-glass.html?lang=en">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800;900&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="window_icon_125687.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
